--- a/StellarByte/Web.csproj
+++ b/StellarByte/Web.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
+  </ItemGroup>
+	
+  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	<ProjectReference Include="..\Application\Application.csproj" />
 	<ProjectReference Include="..\Domain\Domain.csproj" />
